--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "build": "npm install --prefix src/backend && npm install --prefix src/frontend && npm run build --prefix src/frontend",
+  "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
   "start": "npm run start --prefix src/backend"
   },
   "keywords": [],
