--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "streamly",
   "version": "1.0.0",
+  "description": "Full-stack video streaming app with chat using Stream SDK",
   "main": "index.js",
   "scripts": {
-  "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-  "start": "npm run start --prefix backend"
+    "install-all": "npm install --prefix backend && npm install --prefix frontend",
+    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
+    "build": "npm run install-all && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend",
+    "lint": "npm run lint --prefix frontend"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Pravallika091",
   "license": "ISC",
-  "description": ""
+  "keywords": [],
+  "devDependencies": {
+    "concurrently": "^8.2.0"
+  }
 }
